dataset1235/2025-2/1955397009/users/1439409056/executions/3239899347_605654664.log
== RUN (2025-08-28 13:00:16)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21) + 25
#taxa = mercadoria + 25
total = (mercadoria/0.62)


print(mercadoria)
print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(taxa)
          ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(taxa)
          ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(taxa)
          ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(taxa)
          ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(taxa)
          ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(taxa)
          ^^^^
NameError: name 'taxa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:57:54)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21)
taxa = mercadoria* 25
total = (taxa/0.62)


print(mercadoria)
print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
17423.387096774193
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
311007.45967741933
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
36240.645161290326
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
558663.4838709678
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
30020.495967741936
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
66226.29435483871
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:09:16)
-- CODE: 

peso = float(input("peso da mercadoria: "))

frente = (peso * 43.21)
taxa = frente + 25
total = taxa + (0.62) 


print(frente)
print(taxa)
print(total)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
457.72
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
7738.61
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
924.39
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
13880.47
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
770.13
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
1668.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:58:33)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21)
taxa = mercadoria + 25
total = (taxa/0.62)


print(mercadoria)
print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
737.258064516129
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
12480.620967741937
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
1489.9483870967742
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
22386.86193548387
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
1241.142419354839
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
2689.3743548387097
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:02:03)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21)
taxa = mercadoria + 25
total = (mercadoria/0.62)


print(mercadoria)
print(taxa)
print(total)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
696.94
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
12440.3
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
1449.63
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
22346.54
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
1200.82
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
2649.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:58:42)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21)
taxa = mercadoria + 25
total = (taxa/0.62)


print(mercadoria)
print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
737.258064516129
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
12480.620967741937
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
1489.9483870967742
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
22386.86193548387
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
1241.142419354839
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
2689.3743548387097
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:03:14)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso*43.21)
#taxa = mercadoria + 25
total = (mercadoria/0.62) + 25


print(mercadoria)
#print(taxa)
print(total)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
721.94
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
12465.3
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
1474.63
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
22371.54
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
1225.82
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
2674.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:58:38)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21)
taxa = mercadoria + 25
total = (taxa/0.62)


print(mercadoria)
print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
737.258064516129
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
12480.620967741937
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
1489.9483870967742
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
22386.86193548387
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
1241.142419354839
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
2689.3743548387097
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:55:36)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21)
taxa = mercadoria + 25
total = (taxa/0.62)


print(mercadoria)
print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
737.258064516129
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
12480.620967741937
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
1489.9483870967742
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
22386.86193548387
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
1241.142419354839
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
2689.3743548387097
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:00:31)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21) + 25
#taxa = mercadoria + 25
total = (mercadoria/0.62)


print(mercadoria)
#print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
---- user output:
737.258064516129
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
---- user output:
12480.620967741937
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
---- user output:
1489.9483870967742
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
---- user output:
22386.86193548387
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
---- user output:
1241.142419354839
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
---- user output:
2689.3743548387097
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:59:59)
-- CODE: 

peso = float(input("peso da mercadoria: "))

mercadoria = (peso * 43.21) + 25
#taxa = mercadoria + 25
total = (taxa/0.62)


print(mercadoria)
print(taxa)
print(total)
#print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
---- correct output:
740.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (taxa/0.62)
             ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 2:
---- input:
178.50
---- correct output:
12535.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (taxa/0.62)
             ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 3:
---- input:
20.8
---- correct output:
1496.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (taxa/0.62)
             ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 4:
---- input:
320.64
---- correct output:
22485.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (taxa/0.62)
             ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 5:
---- input:
17.23
---- correct output:
1246.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (taxa/0.62)
             ^^^^
NameError: name 'taxa' is not defined
-- TEST CASE 6:
---- input:
38.01
---- correct output:
2701.21
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = (taxa/0.62)
             ^^^^
NameError: name 'taxa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
